--- a/css/map.css
+++ b/css/map.css
@@ -15,7 +15,6 @@
     flex-direction: column;
     font-family: Gotham, Helvetica, Arial, sans-serif;
     height: 100vh;
-    justify-content: space-between;
     overflow: visible;
     margin: 0;
     width: 400px;
@@ -23,17 +22,18 @@
 }
 
 .title-header {
-    background-color: #ffffff;
+    background-color: #1caff6;
+    color: #fff;
     padding: 30px 24px 24px 16px;
-    align-items: center;
-    display: flex;
-    flex-direction: row;
+    text-align: center;
     font-size: 20px;
     font-weight: bold;
 }
 
 .information {
     background-color: #ffffff;
+    display: flex;
+    flex-direction: column;
     border-radius: 0;
     box-shadow: 0 2px 8px 0 rgba(0, 0, 0, .11);
     width: 100%;
@@ -41,6 +41,7 @@
 
 .subtitle-header {
     border-bottom: 1px solid #e5e5e5;
+    border-top: 1px solid #e5e5e5;
     align-items: center;
     display: flex;
     flex-direction: column;
@@ -70,7 +71,6 @@ body, *{
 
 .calendar .dropdown {
     display: none;
-    position: absolute;
     background-color: #fff;
     color: #1caff6;
     text-align: center;
