--- a/src/index.css
+++ b/src/index.css
@@ -31,7 +31,7 @@ code {
   height: 100vh;
   overflow: visible;
   margin: 0;
-  width: 400px;
+  width: 350px;
   z-index: 1;
 }
 
@@ -168,11 +168,12 @@ body, *{
 }
 
 .calendar .calendar-dates .days .day.label {
-  height: 40px;
+  height: 20px;
   background-color: white;
   color: black;
   border:none;
   font-weight:bold;
+  font-size: 12px;
 }
 
 .clear {
@@ -207,4 +208,17 @@ body, *{
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+#slider {
+  margin-left: 20px;
+}
+
+.links {
+  text-align: center;
+}
+
+.link {
+  margin: 5px;
+  font-size: 14px;
 }
