--- a/src/index.css
+++ b/src/index.css
@@ -88,14 +88,13 @@ body, *{
   background-color: #fff;
   color: #1caff6;
   text-align: center;
-  font-size: 14pt;
+  font-size: 10pt;
   padding-top: 5px;
   padding-bottom: 5px;
-  padding-left: 30px;
-  padding-right: 30px;
-  width: 160px;
+  width: 60px;
   left: 0px;
   z-index: 2000;
+  position: absolute;
 }
 
 .calendar .dropdown .dropdown-item {
